[gd_scene load_steps=21 format=3 uid="uid://c5aqpwhl5hkyl"]

[ext_resource type="Texture2D" uid="uid://dsonk3wjsuewj" path="res://addons/pixel_ever/grid.png" id="1"]
[ext_resource type="Script" path="res://addons/pixel_ever/sprite_editor.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://dbsscr3g8b2c0" path="res://addons/pixel_ever/fill.png" id="5"]
[ext_resource type="Texture2D" uid="uid://dp6f12413evfs" path="res://addons/pixel_ever/save.png" id="6"]
[ext_resource type="Texture2D" uid="uid://cp3msj51752ag" path="res://addons/pixel_ever/draw.png" id="8"]
[ext_resource type="Texture2D" uid="uid://byb7him5gmmt3" path="res://addons/pixel_ever/pick.png" id="9"]
[ext_resource type="Script" path="res://addons/pixel_ever/top_grid.gd" id="10"]
[ext_resource type="Texture2D" uid="uid://38m1axtsv1v3" path="res://assets/Archaeologist.png" id="10_thw7d"]
[ext_resource type="Texture2D" uid="uid://dfwpvd2qdroc0" path="res://addons/pixel_ever/pal/bubblegum-16.png" id="11"]
[ext_resource type="Texture2D" uid="uid://dhnd7vha1vo5x" path="res://addons/pixel_ever/buck.png" id="12"]
[ext_resource type="Texture2D" uid="uid://r62l8m7ptu7v" path="res://addons/pixel_ever/crop.png" id="13"]

[sub_resource type="InputEventKey" id="InputEventKey_sgkbd"]
keycode = 66

[sub_resource type="Shortcut" id="Shortcut_tdpu1"]
events = [SubResource("InputEventKey_sgkbd")]

[sub_resource type="ButtonGroup" id="ButtonGroup_64gvs"]

[sub_resource type="InputEventKey" id="InputEventKey_5c4y6"]
keycode = 73

[sub_resource type="Shortcut" id="Shortcut_2auka"]
events = [SubResource("InputEventKey_5c4y6")]

[sub_resource type="InputEventKey" id="InputEventKey_1d8a5"]
keycode = 88

[sub_resource type="Shortcut" id="Shortcut_vjb76"]
events = [SubResource("InputEventKey_1d8a5")]

[sub_resource type="InputEventKey" id="InputEventKey_kxo0x"]
keycode = 71

[sub_resource type="Shortcut" id="Shortcut_mbfj8"]
events = [SubResource("InputEventKey_kxo0x")]

[node name="sprite_editor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("2")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.176471, 0.14902, 0.14902, 1)

[node name="scroll" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="hb" type="HBoxContainer" parent="scroll"]
layout_mode = 2
offset_right = 1152.0
offset_bottom = 648.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="vb" type="VBoxContainer" parent="scroll/hb"]
layout_mode = 2
offset_right = 128.0
offset_bottom = 648.0

[node name="Button0" type="Button" parent="scroll/hb/vb"]
layout_mode = 2
offset_right = 128.0
offset_bottom = 31.0
toggle_mode = true
shortcut = SubResource("Shortcut_tdpu1")
button_group = SubResource("ButtonGroup_64gvs")
text = "Draw"
icon = ExtResource("8")
expand_icon = true

[node name="Button1" type="Button" parent="scroll/hb/vb"]
layout_mode = 2
offset_top = 35.0
offset_right = 128.0
offset_bottom = 66.0
toggle_mode = true
shortcut = SubResource("Shortcut_2auka")
button_group = SubResource("ButtonGroup_64gvs")
text = "Pick Color"
icon = ExtResource("9")
expand_icon = true

[node name="Button2" type="Button" parent="scroll/hb/vb"]
layout_mode = 2
offset_top = 70.0
offset_right = 128.0
offset_bottom = 101.0
toggle_mode = true
shortcut = SubResource("Shortcut_vjb76")
button_group = SubResource("ButtonGroup_64gvs")
text = "Replace Color"
icon = ExtResource("5")
expand_icon = true

[node name="Button3" type="Button" parent="scroll/hb/vb"]
layout_mode = 2
offset_top = 105.0
offset_right = 128.0
offset_bottom = 136.0
toggle_mode = true
shortcut = SubResource("Shortcut_mbfj8")
button_group = SubResource("ButtonGroup_64gvs")
text = "Paint Bucket"
icon = ExtResource("12")
expand_icon = true

[node name="Control" type="Control" parent="scroll/hb/vb"]
layout_mode = 2
anchors_preset = 0
offset_top = 140.0
offset_right = 128.0
offset_bottom = 416.0
size_flags_vertical = 3

[node name="Label2" type="Label" parent="scroll/hb/vb"]
modulate = Color(1, 1, 1, 0.392157)
layout_mode = 2
offset_top = 420.0
offset_right = 128.0
offset_bottom = 446.0
text = "pos"

[node name="ColorPickerButton" type="ColorPickerButton" parent="scroll/hb/vb"]
layout_mode = 2
offset_top = 450.0
offset_right = 128.0
offset_bottom = 481.0
text = "left"

[node name="pal" type="TextureRect" parent="scroll/hb/vb"]
layout_mode = 2
offset_top = 485.0
offset_right = 128.0
offset_bottom = 613.0
texture = ExtResource("11")

[node name="pal_list" type="MenuButton" parent="scroll/hb/vb"]
layout_mode = 2
offset_top = 617.0
offset_right = 128.0
offset_bottom = 648.0
text = "palettes"
flat = false
item_count = 5
popup/item_0/text = "html-color.png"
popup/item_0/checkable = 2
popup/item_0/id = 0
popup/item_1/text = "bubblegum-16.png"
popup/item_1/checkable = 2
popup/item_1/id = 1
popup/item_2/text = "pico8-16.png"
popup/item_2/checkable = 2
popup/item_2/id = 2
popup/item_3/text = "lospecCDI-32.png"
popup/item_3/checkable = 2
popup/item_3/id = 3
popup/item_4/text = "resurrect-32.png"
popup/item_4/checkable = 2
popup/item_4/id = 4

[node name="option" type="OptionButton" parent="scroll/hb/vb"]
visible = false
layout_mode = 2

[node name="seprator" type="Control" parent="scroll/hb"]
layout_mode = 2
anchors_preset = 0
offset_left = 132.0
offset_right = 132.0
offset_bottom = 648.0

[node name="vb2" type="VBoxContainer" parent="scroll/hb"]
layout_mode = 2
offset_left = 136.0
offset_right = 1152.0
offset_bottom = 648.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="hb2" type="HBoxContainer" parent="scroll/hb/vb2"]
layout_mode = 2
offset_right = 1016.0
offset_bottom = 31.0

[node name="grid" type="Button" parent="scroll/hb/vb2/hb2"]
layout_mode = 2
offset_right = 41.0
offset_bottom = 31.0
toggle_mode = true
text = "Grid"
icon = ExtResource("1")
expand_icon = true

[node name="Label" type="Label" parent="scroll/hb/vb2/hb2"]
layout_mode = 2
offset_left = 45.0
offset_top = 2.0
offset_right = 107.0
offset_bottom = 28.0
text = "size XY: "

[node name="size_x" type="LineEdit" parent="scroll/hb/vb2/hb2"]
layout_mode = 2
offset_left = 111.0
offset_right = 178.0
offset_bottom = 31.0
text = "1152"

[node name="size_y" type="LineEdit" parent="scroll/hb/vb2/hb2"]
layout_mode = 2
offset_left = 182.0
offset_right = 249.0
offset_bottom = 31.0
text = "648"

[node name="resize" type="Button" parent="scroll/hb/vb2/hb2"]
layout_mode = 2
offset_left = 253.0
offset_right = 307.0
offset_bottom = 31.0
text = "resize"
icon = ExtResource("13")
expand_icon = true

[node name="zoom" type="Label" parent="scroll/hb/vb2/hb2"]
layout_mode = 2
offset_left = 311.0
offset_top = 2.0
offset_right = 373.0
offset_bottom = 28.0
text = "Zoom: 8"

[node name="HSlider" type="HSlider" parent="scroll/hb/vb2/hb2"]
layout_mode = 2
offset_left = 377.0
offset_top = 7.0
offset_right = 968.0
offset_bottom = 23.0
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 1.0
max_value = 64.0
value = 8.0

[node name="btn_save" type="Button" parent="scroll/hb/vb2/hb2"]
layout_mode = 2
offset_left = 972.0
offset_right = 1016.0
offset_bottom = 31.0
text = "Save"
icon = ExtResource("6")
expand_icon = true

[node name="sc" type="ScrollContainer" parent="scroll/hb/vb2"]
layout_mode = 2
offset_top = 35.0
offset_right = 1016.0
offset_bottom = 648.0
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="center" type="MarginContainer" parent="scroll/hb/vb2/sc"]
layout_mode = 2
offset_right = 10136.0
offset_bottom = 3296.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="back" type="ColorRect" parent="scroll/hb/vb2/sc/center"]
visible = false
layout_mode = 2
offset_right = 10136.0
offset_bottom = 3296.0
color = Color(0.298039, 0.298039, 0.298039, 1)

[node name="top" type="TextureRect" parent="scroll/hb/vb2/sc/center"]
texture_filter = 1
custom_minimum_size = Vector2(10136, 3296)
layout_mode = 2
offset_right = 10136.0
offset_bottom = 3296.0
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_default_cursor_shape = 3
texture = ExtResource("10_thw7d")
script = ExtResource("10")

[node name="cursor" type="TextureRect" parent="scroll/hb/vb2/sc/center/top"]
layout_mode = 0
texture = ExtResource("8")

[node name="FileDialog" type="FileDialog" parent="."]
filters = PackedStringArray("*.png ; PNG Images")

[node name="PopupMenu" type="PopupMenu" parent="."]

[connection signal="toggled" from="scroll/hb/vb/Button0" to="." method="_on_tool_toggled" binds= [0]]
[connection signal="toggled" from="scroll/hb/vb/Button1" to="." method="_on_tool_toggled" binds= [1]]
[connection signal="toggled" from="scroll/hb/vb/Button2" to="." method="_on_tool_toggled" binds= [2]]
[connection signal="toggled" from="scroll/hb/vb/Button3" to="." method="_on_tool_toggled" binds= [3]]
[connection signal="color_changed" from="scroll/hb/vb/ColorPickerButton" to="." method="_on_ColorPickerButton_color_changed"]
[connection signal="gui_input" from="scroll/hb/vb/pal" to="." method="_on_pal_gui_input"]
[connection signal="toggled" from="scroll/hb/vb2/hb2/grid" to="." method="_on_grid_toggled"]
[connection signal="pressed" from="scroll/hb/vb2/hb2/resize" to="." method="_on_resize_pressed"]
[connection signal="value_changed" from="scroll/hb/vb2/hb2/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="pressed" from="scroll/hb/vb2/hb2/btn_save" to="." method="_on_btn_save_pressed"]
[connection signal="mouse_entered" from="scroll/hb/vb2/sc/center/top" to="." method="_on_top_mouse_entered"]
[connection signal="mouse_exited" from="scroll/hb/vb2/sc/center/top" to="." method="_on_top_mouse_exited"]
[connection signal="confirmed" from="FileDialog" to="." method="_on_FileDialog_confirmed"]
